--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,35 @@ body {
 .container button:active {
   transform: scale(0.9);
 }
+
+.chart-container {
+  width: 80%;
+  height: 500px;
+  position: relative;
+  padding: 10px;
+}
+
+.chart {
+  border: 2px solid #2c3e50;
+  border-right: 0;
+  border-top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.y-axis-label {
+  position: absolute;
+  top: 50%;
+  left: -2%;
+  /* margin-left: -10px; */
+  transform: translateX(-50%) translateY(-50%) rotate(-90deg);
+  font-weight: bold;
+}
+
+.x-axis-label {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%); 
+  font-weight: bold;
+  margin-top: 10px;
+}
