--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,20 +5,21 @@ body {
 }
 
 .container {
-  padding: 30px;
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  padding: 30px;
 }
 
 .container button {
   background-color: #2c3e50;
-  color: #fff;
-  padding: 10px 15px;
   border-radius: 5px;
+  color: #fff;
   cursor: pointer;
   font-weight: bold;
+  margin-bottom: 50px;
+  padding: 10px 15px;
   transition: all 0.2s ease-in-out;
 }
 
@@ -27,10 +28,10 @@ body {
 }
 
 .chart-container {
-  width: 80%;
   height: 500px;
-  position: relative;
   padding: 10px;
+  position: relative;
+  width: 80%;
 }
 
 .chart {
@@ -40,9 +41,9 @@ body {
   border-top: 0;
   display: flex;
   gap: 20px;
+  height: 100%;
   justify-content: space-between;
   width: 100%;
-  height: 100%;
 }
 
 .bar {
@@ -51,18 +52,18 @@ body {
 }
 
 .y-axis-label {
+  font-weight: bold;
   position: absolute;
-  top: 50%;
   left: -2%;
+  top: 50%;
   /* margin-left: -10px; */
   transform: translateX(-50%) translateY(-50%) rotate(-90deg);
-  font-weight: bold;
 }
 
 .x-axis-label {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%); 
   font-weight: bold;
+  left: 50%;
   margin-top: 10px;
+  position: absolute;
+  transform: translateX(-50%); 
 }
