--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,7 @@ body {
   border-right: 0;
   border-top: 0;
   display: flex;
-  gap: 20px;
+  gap: 40px;
   height: 100%;
   justify-content: space-between;
   width: 100%;
@@ -48,7 +48,28 @@ body {
 
 .bar {
   flex: 1;
-  height: 100%;
+  position: relative;
+}
+
+.tooltip {
+  background-color: #000;
+  border-radius: 5px;
+  color: #fff;
+  display: block;
+  font-weight: bold;
+  opacity: 0;
+  padding: 4px;
+  position: absolute;
+  right: 50%;
+  top: 0;
+  transform: translate(50%, -120%);
+  transition: opacity 0.4s ease-in-out;
+  width: max-content;
+  z-index: 10;
+}
+
+.bar:hover .tooltip{
+  opacity: 1;
 }
 
 .y-axis-label {
